# Encription-Algorithms

./: README.md
RC4 Algorithm/: CMakeLists.txt  main.cpp  rc4.cpp  rc4.h
SHA256 Algorithm/: CMakeLists.txt
